fix(arc-162): add margin to some page to make room for zendesk on mobile

--- a/src/modules/navigation/components/Footer/Footer.module.scss
+++ b/src/modules/navigation/components/Footer/Footer.module.scss
@@ -12,7 +12,6 @@
 	padding: $spacer-md $spacer-sm $spacer-sm $spacer-sm;
 	color: $neutral;
 	background-color: $white;
-	margin-top: 6rem;
 
 	@include respond-at(xl) {
 		padding-left: $spacer-lg;
